# zxorm

./: .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md  add-license.sh  example.cpp  main.cpp  todo.md
.github/workflows/: ci.yml  cmake.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/zxorm/: common.hpp  logger.hpp  zxorm.hpp
include/zxorm/orm/: column.hpp  connection.hpp  constraints.hpp  record_iterator.hpp  statement.hpp  table.hpp  types.hpp
include/zxorm/orm/query/: clause.hpp
include/zxorm/orm/query/builder/: base_query_builder.hpp  delete_query_builder.hpp  select_query_builder.hpp
include/zxorm/orm/query/prepared_query/: prepared_select_query.hpp
includes/zxorm/: common.hpp  error.hpp  logger.hpp  result.hpp  zxorm.hpp
includes/zxorm/helpers/: meta_container.hpp
includes/zxorm/orm/: clause.hpp  column.hpp  connection.hpp  constraints.hpp  delete.hpp  expression.hpp  field.hpp  query.hpp  query_serializer.hpp  record_iterator.hpp  select.hpp  select_query.hpp  statement.hpp  table.hpp  types.hpp  where.hpp
includes/zxorm/orm/query/: clause.hpp  delete_query.hpp  prepared_select.hpp  query.hpp  select_query.hpp
includes/zxorm/orm/query/builder/: base_query_builder.hpp  delete_query_builder.hpp  select_query_builder.hpp
includes/zxorm/orm/query/prepared_query/: base_prepared_query.hpp  prepared_delete_query.hpp  prepared_select_query.hpp
src/: common.hpp  connection.hpp  table.hpp
test/: CMakeLists.txt
test/source/: foreign_keys_test.cpp  logger.hpp  query_test.cpp  table_creation.cpp
test/src/: count_query_test.cpp  foreign_keys_test.cpp  logger.hpp  query_test.cpp  table_creation.cpp  table_test.cpp
